create scss files

--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,5 @@
-/*# sourceMappingURL=index.css.map */
+@import url(_reset.scss);
+@import url(_other.scss);
+@import url(_assets.scss);
+@import url(_mobile.scss);
+@import url(_desktop.scss);/*# sourceMappingURL=index.css.map */
