--- a/css/index.scss
+++ b/css/index.scss
@@ -1,5 +1,5 @@
-@import url(_reset.scss);
-@import url(_other.scss);
-@import url(_assets.scss);
-@import url(_mobile.scss);
-@import url(_desktop.scss);
+@import "./reset";
+@import "./other";
+@import "./assets";
+@import "./mobile";
+@import "./desktop";
