--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -1,3 +1,39 @@
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 4px 20px;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #a5a2a2;
+  font-size: 1.5em;
+  backdrop-filter: blur(5px);
+}
+
 .hero {
+  width: 100vw;
+  height: 95vh;
   background-image: url(../assets/backgroundHero.png);
+  background-position: 50%;
+  background-size: cover;
+  color: #efefef;
+  &__content {
+    position: absolute;
+    top: 48%;
+    left: 0;
+    padding: 20px;
+    height: calc(50% - 20px);
+    width: 100%;
+    &__first {
+      position: absolute;
+      bottom: 5%;
+      right: 10%;
+      text-transform: uppercase;
+      color: rgb(253, 219, 63);
+      font-size: 5em;
+    }
+  }
 }
