--- a/css/_reset.scss
+++ b/css/_reset.scss
@@ -2,5 +2,8 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "Open Sans";
+  font-family: Open Sans, sans-serif;
+}
+body {
+  background-color: #000;
 }
