--- a/css/index.css
+++ b/css/index.css
@@ -2,9 +2,63 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "Open Sans";
+  font-family: Open Sans, sans-serif;
+}
+
+body {
+  background-color: #000;
+}
+
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 4px 20px;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #a5a2a2;
+  font-size: 1.5em;
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
 }
 
 .hero {
+  width: 100vw;
+  height: 95vh;
   background-image: url(../assets/backgroundHero.png);
+  background-position: 50%;
+  background-size: cover;
+  color: #efefef;
+}
+.hero__content {
+  position: absolute;
+  top: 48%;
+  left: 0;
+  padding: 20px;
+  height: calc(50% - 20px);
+  width: 100%;
+}
+.hero__content__first {
+  position: absolute;
+  bottom: 5%;
+  right: 10%;
+  text-transform: uppercase;
+  color: rgb(253, 219, 63);
+  font-size: 5em;
+}
+
+@media screen and (min-width: 924px) {
+  .hero__content {
+    height: 90%;
+    top: 10%;
+  }
+  .hero__content__motto {
+    margin-left: 30px;
+  }
+  .hero__content__first {
+    bottom: 10%;
+  }
 }/*# sourceMappingURL=index.css.map */
