--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -9,4 +9,61 @@
       bottom: 10%;
     }
   }
+
+  .about {
+    margin: 100px 10%;
+    &__description {
+      display: flex;
+      align-items: center;
+      &__h2 {
+        width: 50%;
+      }
+      &__content {
+        width: 50%;
+        &__paragraph {
+          margin: unset;
+        }
+      }
+    }
+  }
+
+  .tastySection {
+    margin-top: 70px;
+    display: grid;
+    grid-template-columns: 2fr 1fr 2fr;
+    &__text {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 8em;
+    }
+    &__images__menu {
+      display: flex;
+      align-items: center;
+      .tastySection__images__img {
+        width: 50%;
+      }
+    }
+  }
+
+  .located {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin-left: -150px;
+
+    &__content {
+      margin: auto;
+    }
+    &__h2 {
+      padding: unset;
+      padding-bottom: 35px;
+    }
+  }
+
+  .mobile_break {
+    display: none;
+  }
+  .desktop_break {
+    display: block;
+  }
 }
