--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -104,9 +104,28 @@
   }
 }
 
+.delivery {
+  &__img {
+    width: 100%;
+    background-image: url("../assets//deliveryImg.png");
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 576px;
+    margin-top: 40px;
+  }
+  &__info {
+    &__img {
+      width: 157px;
+      height: 156px;
+      margin: 60px 0;
+    }
+  }
+}
+
 .desktop_break {
-  display: block;
+  display: none;
 }
 .mobile_break {
-  display: none;
+  display: block;
 }
