--- a/css/index.css
+++ b/css/index.css
@@ -146,6 +146,16 @@ body {
   margin: 60px 0;
 }
 
+.break {
+  width: calc(100% + 100px);
+  height: 700px;
+  background-image: url(../assets/breakImg.png);
+  background-position: center;
+  background-size: cover;
+  margin-left: -50px;
+  margin-top: 30px;
+}
+
 .desktop_break {
   display: none;
 }
@@ -227,6 +237,11 @@ body {
   .delivery__info__img {
     width: 50%;
     height: 50%;
+  }
+  .break {
+    margin-top: 100px;
+    margin-left: -150px;
+    width: calc(100% + 300px);
   }
   .mobile_break {
     display: none;
