--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -46,6 +46,7 @@
     &__content {
       &__paragraph {
         margin-top: 90px;
+        font-weight: lighter;
       }
     }
   }
@@ -77,6 +78,9 @@
   &__content {
     color: rgb(221, 218, 214);
     padding: 0 30px;
+    &__paragraph {
+      font-weight: lighter;
+    }
     &__third {
       background-image: url("../assets/oats.png");
       background-position: 50%;
@@ -87,20 +91,6 @@
   &__h2 {
     color: #efefef;
     padding: 35px 0;
-  }
-  &__btn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #000;
-    text-decoration: none;
-    color: rgb(253, 219, 63);
-    width: 125px;
-    height: 30px;
-    font-weight: bold;
-    margin-top: 45px;
-    font-size: 0.8em;
-    padding: 10px;
   }
 }
 
@@ -130,6 +120,40 @@
   background-size: cover;
   margin-left: -50px;
   margin-top: 30px;
+}
+
+.chef {
+  display: grid;
+  grid-template-rows: 1.2fr 1fr 1fr;
+  background-color: #7b5300;
+  margin-left: -50px;
+  font-weight: lighter;
+  &__img {
+    background-image: url(../assets/headChiefImg.png);
+    background-size: cover;
+    background-position: center;
+  }
+  &__main {
+    padding: 10px 30px;
+    padding-left: 35px;
+    font-size: 0.9em;
+
+    &__h2 {
+      letter-spacing: 1px;
+      margin-bottom: 30px;
+      font-weight: bold;
+      font-size: 1.7em;
+    }
+    &__h4 {
+      margin: 30px 0;
+      font-weight: lighter;
+    }
+  }
+  &__description {
+    padding: 10px 30px;
+    padding-left: 35px;
+    font-size: 0.9em;
+  }
 }
 
 .desktop_break {
