--- a/css/index.css
+++ b/css/index.css
@@ -14,7 +14,7 @@ body {
   color: rgb(253, 219, 63);
 }
 
-.btn {
+.black_btn {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -24,9 +24,28 @@ body {
   width: 125px;
   height: 30px;
   font-weight: bold;
-  margin-top: 20px;
+  margin: 22px 0;
   font-size: 0.8em;
   padding: 10px;
+  background-color: #000;
+  color: rgb(253, 219, 63);
+}
+
+.yellow_btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(129, 106, 1);
+  text-decoration: none;
+  color: #efefef;
+  width: 125px;
+  height: 30px;
+  font-weight: bold;
+  margin: 22px 0;
+  font-size: 0.8em;
+  padding: 10px;
+  color: #efefef;
+  background-color: #7b5300;
 }
 
 .center {
@@ -81,6 +100,7 @@ body {
 }
 .about__description__content__paragraph {
   margin-top: 90px;
+  font-weight: lighter;
 }
 
 .tastySection__images__img {
@@ -106,6 +126,9 @@ body {
   color: rgb(221, 218, 214);
   padding: 0 30px;
 }
+.located__content__paragraph {
+  font-weight: lighter;
+}
 .located__content__third {
   background-image: url("../assets/oats.png");
   background-position: 50%;
@@ -115,20 +138,6 @@ body {
 .located__h2 {
   color: #efefef;
   padding: 35px 0;
-}
-.located__btn {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #000;
-  text-decoration: none;
-  color: rgb(253, 219, 63);
-  width: 125px;
-  height: 30px;
-  font-weight: bold;
-  margin-top: 45px;
-  font-size: 0.8em;
-  padding: 10px;
 }
 
 .delivery__img {
@@ -154,6 +163,39 @@ body {
   background-size: cover;
   margin-left: -50px;
   margin-top: 30px;
+}
+
+.chef {
+  display: grid;
+  grid-template-rows: 1.2fr 1fr 1fr;
+  background-color: #7b5300;
+  margin-left: -50px;
+  font-weight: lighter;
+}
+.chef__img {
+  background-image: url(../assets/headChiefImg.png);
+  background-size: cover;
+  background-position: center;
+}
+.chef__main {
+  padding: 10px 30px;
+  padding-left: 35px;
+  font-size: 0.9em;
+}
+.chef__main__h2 {
+  letter-spacing: 1px;
+  margin-bottom: 30px;
+  font-weight: bold;
+  font-size: 1.7em;
+}
+.chef__main__h4 {
+  margin: 30px 0;
+  font-weight: lighter;
+}
+.chef__description {
+  padding: 10px 30px;
+  padding-left: 35px;
+  font-size: 0.9em;
 }
 
 .desktop_break {
@@ -242,6 +284,16 @@ body {
     margin-top: 100px;
     margin-left: -150px;
     width: calc(100% + 300px);
+  }
+  .chef {
+    grid-template-rows: unset;
+    grid-template-columns: 1fr 1fr 1fr;
+    height: 610px;
+  }
+  .chef__main, .chef__description {
+    margin: auto;
+    margin-top: 230px;
+    line-height: 20px;
   }
   .mobile_break {
     display: none;
