--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -155,6 +155,15 @@
     font-size: 0.9em;
   }
 }
+.delivery_sf {
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  &__img {
+    width: 80%;
+    margin-top: 20px;
+  }
+}
 
 .desktop_break {
   display: none;
