--- a/css/index.css
+++ b/css/index.css
@@ -198,6 +198,16 @@ body {
   font-size: 0.9em;
 }
 
+.delivery_sf {
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+}
+.delivery_sf__img {
+  width: 80%;
+  margin-top: 20px;
+}
+
 .desktop_break {
   display: none;
 }
@@ -294,6 +304,22 @@ body {
     margin: auto;
     margin-top: 230px;
     line-height: 20px;
+  }
+  .delivery_sf {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 90%;
+    margin-left: -50px;
+  }
+  .delivery_sf__h2 {
+    line-height: 150%;
+    font-size: 1.8em;
+    margin-bottom: 150px;
+  }
+  .delivery_sf__img {
+    transform: translateY(-150px);
+    width: 35%;
   }
   .mobile_break {
     display: none;
