--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -165,6 +165,49 @@
   }
 }
 
+.contact {
+  display: grid;
+  grid-template-columns: 9fr 2fr;
+  margin: 40px -50px;
+  &__text {
+    color: rgb(253, 219, 63);
+    text-align: center;
+    font-size: 2.4em;
+  }
+
+  &__container {
+    position: relative;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.2);
+    &::after {
+      content: "";
+      position: absolute;
+      display: block;
+      z-index: -1;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      filter: blur(5px);
+      background-image: url(../assets/burger.png);
+      background-size: cover;
+    }
+  }
+  &__content {
+    position: absolute;
+    top: 25%;
+    left: 5%;
+    p {
+      margin-top: 10px;
+    }
+  }
+}
+.social_icon {
+  width: 32px;
+  height: 32px;
+  fill: #efefef;
+  margin-top: 20px;
+}
 .desktop_break {
   display: none;
 }
