--- a/css/index.css
+++ b/css/index.css
@@ -208,6 +208,50 @@ body {
   margin-top: 20px;
 }
 
+.contact {
+  display: grid;
+  grid-template-columns: 9fr 2fr;
+  margin: 40px -50px;
+}
+.contact__text {
+  color: rgb(253, 219, 63);
+  text-align: center;
+  font-size: 2.4em;
+}
+.contact__container {
+  position: relative;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+.contact__container::after {
+  content: "";
+  position: absolute;
+  display: block;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  filter: blur(5px);
+  background-image: url(../assets/burger.png);
+  background-size: cover;
+}
+.contact__content {
+  position: absolute;
+  top: 25%;
+  left: 5%;
+}
+.contact__content p {
+  margin-top: 10px;
+}
+
+.social_icon {
+  width: 32px;
+  height: 32px;
+  fill: #efefef;
+  margin-top: 20px;
+}
+
 .desktop_break {
   display: none;
 }
