--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -49,7 +49,7 @@
   .located {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    margin-left: -150px;
+    margin-left: -128px;
 
     &__content {
       margin: auto;
@@ -81,7 +81,7 @@
   .break {
     margin-top: 100px;
     margin-left: -150px;
-    width: calc(100% + 300px);
+    width: calc(100% + 280px);
   }
 
   .chef {
@@ -112,6 +112,16 @@
       width: 35%;
     }
   }
+
+  .navigation__content__option {
+    width: 400px;
+    margin-bottom: 10px;
+  }
+
+  .navigation::before {
+    font-size: 15em;
+  }
+
   .mobile_break {
     display: none;
   }
