--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -214,3 +214,77 @@
 .mobile_break {
   display: block;
 }
+
+.navigation {
+  position: fixed;
+  top: 0;
+  left: -100%;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  transition: transform 0.3s;
+  &::before {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    content: "Menu";
+    text-align: center;
+    font-size: 8em;
+    opacity: 0.5;
+    transform: translate(-50%, -50%);
+    color: rgba(253, 219, 63, 0.3);
+  }
+  &.active {
+    transform: translateX(100%);
+  }
+  &__content {
+    position: absolute;
+    top: 50%;
+    left: 45%;
+    transform: translate(-50%, -50%);
+    list-style-type: none;
+    &__option {
+      display: flex;
+      align-items: center;
+      padding-left: 20px;
+      margin-bottom: 20px;
+      height: 40px;
+      border-left: 2px solid #7b5300;
+      color: #efefef;
+      transition: color, background-color, width 0.3s;
+      text-transform: uppercase;
+      position: relative;
+      cursor: pointer;
+      overflow: hidden;
+      &::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: -100%;
+        background-color: rgba(123, 83, 0, 0.7);
+        width: 100%;
+        height: 100%;
+        transition: transform 0.2s;
+        z-index: -1;
+      }
+      &:hover {
+        &::after {
+          transform: translateX(100%);
+        }
+      }
+    }
+  }
+}
+
+.menu-icon {
+  cursor: pointer;
+  z-index: 2;
+}
+.close-icon {
+  fill: rgb(253, 219, 63);
+  position: absolute;
+  top: 3%;
+  right: 3%;
+  cursor: pointer;
+}
