--- a/css/index.css
+++ b/css/index.css
@@ -260,6 +260,79 @@ body {
   display: block;
 }
 
+.navigation {
+  position: fixed;
+  top: 0;
+  left: -100%;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  transition: transform 0.3s;
+}
+.navigation::before {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  content: "Menu";
+  text-align: center;
+  font-size: 8em;
+  opacity: 0.5;
+  transform: translate(-50%, -50%);
+  color: rgba(253, 219, 63, 0.3);
+}
+.navigation.active {
+  transform: translateX(100%);
+}
+.navigation__content {
+  position: absolute;
+  top: 50%;
+  left: 45%;
+  transform: translate(-50%, -50%);
+  list-style-type: none;
+}
+.navigation__content__option {
+  display: flex;
+  align-items: center;
+  padding-left: 20px;
+  margin-bottom: 20px;
+  height: 40px;
+  border-left: 2px solid #7b5300;
+  color: #efefef;
+  transition: color, background-color, width 0.3s;
+  text-transform: uppercase;
+  position: relative;
+  cursor: pointer;
+  overflow: hidden;
+}
+.navigation__content__option::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -100%;
+  background-color: rgba(123, 83, 0, 0.7);
+  width: 100%;
+  height: 100%;
+  transition: transform 0.2s;
+  z-index: -1;
+}
+.navigation__content__option:hover::after {
+  transform: translateX(100%);
+}
+
+.menu-icon {
+  cursor: pointer;
+  z-index: 2;
+}
+
+.close-icon {
+  fill: rgb(253, 219, 63);
+  position: absolute;
+  top: 3%;
+  right: 3%;
+  cursor: pointer;
+}
+
 @media screen and (min-width: 624px) {
   .hero__content {
     height: 90%;
@@ -308,7 +381,7 @@ body {
   .located {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    margin-left: -150px;
+    margin-left: -128px;
   }
   .located__content {
     margin: auto;
@@ -337,7 +410,7 @@ body {
   .break {
     margin-top: 100px;
     margin-left: -150px;
-    width: calc(100% + 300px);
+    width: calc(100% + 280px);
   }
   .chef {
     grid-template-rows: unset;
@@ -364,6 +437,13 @@ body {
   .delivery_sf__img {
     transform: translateY(-150px);
     width: 35%;
+  }
+  .navigation__content__option {
+    width: 400px;
+    margin-bottom: 10px;
+  }
+  .navigation::before {
+    font-size: 15em;
   }
   .mobile_break {
     display: none;
