--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -255,8 +255,14 @@
       transition: color, background-color, width 0.3s;
       text-transform: uppercase;
       position: relative;
-      cursor: pointer;
+      // cursor: pointer;
       overflow: hidden;
+      a {
+        color: #efefef;
+        text-decoration: none;
+        width: 100%;
+        height: 100%;
+      }
       &::after {
         content: "";
         position: absolute;
