--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,7 @@
 body {
   background-color: #000;
   color: #efefef;
+  scroll-behavior: smooth;
 }
 
 .header__content {
@@ -302,8 +303,13 @@ body {
   transition: color, background-color, width 0.3s;
   text-transform: uppercase;
   position: relative;
-  cursor: pointer;
   overflow: hidden;
+}
+.navigation__content__option a {
+  color: #efefef;
+  text-decoration: none;
+  width: 100%;
+  height: 100%;
 }
 .navigation__content__option::after {
   content: "";
