--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -34,7 +34,8 @@
     display: grid;
     grid-template-columns: 2fr 1fr 2fr;
     &__text {
-      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
       align-items: center;
       justify-content: center;
       font-size: 8em;
