--- a/css/index.css
+++ b/css/index.css
@@ -377,7 +377,8 @@ body {
     grid-template-columns: 2fr 1fr 2fr;
   }
   .tastySection__text {
-    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     font-size: 8em;
