--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
+  width: 100vw;
   padding: 4px 20px;
   background-color: rgba(0, 0, 0, 0.5);
   color: #a5a2a2;
