--- a/css/index.css
+++ b/css/index.css
@@ -60,7 +60,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
+  width: 100vw;
   padding: 4px 20px;
   background-color: rgba(0, 0, 0, 0.5);
   color: #a5a2a2;
